Fixed overflow for message bar and button

--- a/src/App.css
+++ b/src/App.css
@@ -246,6 +246,7 @@ a.button.primary{
     float:left;
     width:100%;
     height:45px;
+    display:flex;
   }
 
   .messageBar input{
@@ -253,15 +254,12 @@ a.button.primary{
     height:calc(100% - 2px);
     border:none;
     margin:0px;
-    float:left;
     padding-left:10px;
     font-size: 22px;
     background:#f9f9f9;
   }
 
   .messageBar button{
-    float:left;
-    width:calc(20% - 9px);
     height:100%;
     margin:0px;
     border:none;
@@ -269,4 +267,5 @@ a.button.primary{
     color:white;
     font-family: 'Times New Roman', Times, serif;
     font-size: 16px;
+    flex-grow: 1;
   }
